--- a/CV/css/app.css
+++ b/CV/css/app.css
@@ -104,6 +104,41 @@ body {
     -moz-osx-font-smothing: grayscale;
     cursor: none;
 }
+
+span{
+    margin: 10px;
+}
+
+.check{
+    position:relative;
+    width: 2em;
+}
+.check:before{
+    content: "";
+    position: absolute;
+    width: 2em;
+    height: 1em;
+    background: #333;
+    border-radius: 2em;
+}
+.check:after{
+    content: "";
+    position: absolute;
+    width: 1em;
+    height: 1em;
+    background: #fff;
+    border-radius: 1em;
+    transition: 0.25s;
+    border: 1px solid #333;
+    box-sizing: border-box;
+}
+.check:checked:before{
+    background: #00a1ff;
+}
+.check:checked:after{
+    left: 1em;
+    border: 1px solid #00a1ff;
+}
 .circulos{
     position: fixed;
     width: 100%;
@@ -163,7 +198,7 @@ body {
     justify-content: space-between;
     align-items: center;
 
-    display: none;
+    display: flex;
 }
 .header .ul{
     display: flex;
@@ -234,7 +269,7 @@ body {
 }
 .seccion .h3{
     font-family: var(--tipo-titular);
-    font-size: 4.3em;
+    font-size: 4.2em;
     /* font-style: italic; */
 }
 .seccion .grid{
